<resources>
    <!--Static Messages-->
    <string name="app_name">OCC Student Success Center</string>
    <string name="student_success_center_hours">Mon.-Thur. 9am-7pm, Fri. 9am-3-pm, Sat. 11am-3pm,
        Sun. Closed</string>
    <string name="faq_title">Frequently Asked Questions</string>
    <string name="tutors_available">Tutors Available \n for</string>
    <string name="tutor_hours_text">Hours available:</string>
    <string name="tutor_courses_text">Courses available:</string>
    <string name="edit_profile_text">Edit Profile</string>
    <string name="title_activity_maps">Map</string>
    <string name="contact_us_text">Contact Us</string>
    <string name="address_text">2701 Fairview Rd\nCosta Mesa\nCA 92626\nClassrooms and Labs Building\nRoom 103 </string>
    <string name="phone_text" translatable="false">(714) 432-5559</string>
    <string name="at">at </string>

    <!--Toasts-->
    <string name="save_successful">Your information has been saved.</string>
    <string name="english_toast">English tutoring is available at all hours of operation.</string>

    <!--Error Messages-->
    <string name="add_class_error">You must select a subject and class before adding.</string>
    <string name="search_subject_class_error">You must select a subject and class.</string>
    <string name="search_hour_minute_error">If specifying time, you must select both hour and minutes</string>
    <string name="first_or_last_error">First Name, Last Name, and Student Number
        field must have values.</string>

    <!--Unused-->
    <string name="title_activity_menu" translatable="false">MenuActivity</string>
    <string name="title_activity_nav_drawer" translatable="false">NavDrawerActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_directions">Map</string>

    <!--Drop Downs-->
    <string name="math">Math</string>
    <string name="english">English</string>
    <string name="chemistry">Chemistry</string>
    <string name="biology">Biology</string>
    <string name="default_course_search">[Select course]</string>
    <string name="default_subject_search">[Select subject]</string>
    <string name="default_day_search">[Select day]</string>
    <string name="default_hour_search">[Select hour]</string>
    <string name="default_minutes_search">[Select minutes]</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="default_minutes">00</string>
    <string name="subject_drop_down_text">[Select subject]</string>
    <string name="class_drop_down_text">[Select class]</string>
    <string name="day_drop_down_text">Pick a day.</string>
    <string name="hour_drop_down_text">What time?</string>

    <!--Variable Text-->
    <string name="subject_time_header" formatted="false" translatable="false">%s %s %s</string>

    <!--Buttons-->
    <string name="search_button_text">Search</string>
    <string name="clear_button_text">Clear Search</string>
    <string name="return_to_search_text">Return to Search</string>
    <string name="faq_button">FAQ</string>
    <string name="tutor_search_button">Tutor Search</string>
    <string name="study_group_button">Study Group</string>
    <string name="contact_button">Contact</string>
    <string name="location_button">Location</string>
    <string name="resources_button">Resources</string>
    <string name="profile_button">Profile</string>
    <string name="to_ask_button">Questions for Tutor</string>
    <string name="study_groups">Study Groups</string>
    <string name="remove_selected_button">Remove Selected</string>
    <string name="add_class_button">Add Class</string>
    <string name="save_name_button">Save Name</string>
    <string name="student_info_button">Save User Info</string>
    <string name="to_ask_title">Questions for the Tutor</string>
    <string name="add_question_button">Add Question</string>
    <string name="clear_questions_button">Clear Selected</string>
    <string name="return_to_profile_button">Return to Profile</string>
    <string name="additional_resources_text">Additional Resources</string>
    <string name="update_successful">Your information has been updated.</string>
    <string name="no_tutors_error">No tutors available for this request.</string>
    <string name="user_course_text_string">Courses</string>
    <string name="content_codecademy">Codecademy Clickable</string>
    <string name="content_khan">Khan Academy Clickable</string>
    <string name="content_blackboard">Blackboard Clickable</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="student_number">Student Number</string>
    <string name="question_for_later">Enter Question For Later</string>
    <string name="study_question_text">Want to start your own study group? Press here.</string>
    <string name="name">Name</string>

    <!--FAQuestions-->
    <string-array name="faq_list">
        <item name="hours_q">When is the Student Success Center open?</item>
        <item name="contact_q">How can I get in contact with the Success Center?</item>
        <item name="where_q">Where is the Student Success Center located on campus?</item>
        <item name="private_q">Can I make an appointment for private one on one tutoring?</item>
        <item name="num_appointment_q">How many appointments can I make a week?</item>
        <item name="need_q">What do I need to do to receive tutoring at the Success Center?</item>
        <item name="bring_q">Is there anything I need to bring with me for tutoring?</item>
        <item name="study_group_q">How can I set up a study group?</item>
    </string-array>

    <!--FAQ Answers-->
    <string-array name="faq_details">
        <item name="hours_a">The Success Center is open Monday through Thursday from
        9 a.m. to 7 p.m., Friday 9 a.m. to 3 p.m. and Saturday from 11 a.m. to 3 p.m. We are
        closed Sundays.</item>
    <item name="contact_a">The best way for you to contact us is by phone at
        (714)432-5559.</item>
    <item name="where_a">We are located in the Classrooms and Labs building (C&amp;L) 103
        under the blue clock tower.</item>
    <item name="private_a">One on one tutoring is available for a variety of subjects and can
        be arranged by coming into the Success Center and setting up an appointment with the front
        desk.</item>
    <item name="num_appointment_a">Generally you can make one appointment a week unless you
        qualify for special assistance and get approval for additional help from your counselor.
    </item>
    <item name="need_a">In order to be tutored at the Success Center you must come into the
        center and sign up for Tutoring 050. The front desk staff will be able to guide you through
        the registration process.</item>
    <item name="bring_a">You MUST have your Student ID in order to sign in for tutoring. We
        also request that you bring your book, syllabus, notes, and study materials as well as
        questions for the tutors and a ready to work attitude.</item>
    <item name="study_group_a">You can request a study group for any subject. In order to do so
        you must have at least 5 students willing to sign up and commit to attending a study
        session on a weekly basis. Sign-up sheets are located in folders organized by subject at
        the front desk of the Student Success center. Most study sessions are once a week for 50
        minutes and new students are welcome to join an existing study group at any time.</item>
    </string-array>


</resources>
