<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.orangecoastcollege.cs273.kfrederick5tmorrissey1ischenck.occstudentsuccesscenter.SearchActivity"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <ExpandableListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@string/subject_drop_down_text"
            android:id="@+id/subjectDropDown"
            android:layout_marginRight="50dp">

        </ExpandableListView>

        <ExpandableListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@string/class_drop_down_text"
            android:id="@+id/classDropDown"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ExpandableListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@string/day_drop_down_text"
            android:id="@+id/dayDropDown"
            android:layout_marginRight="10dp"
            />

        <ExpandableListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/hourDropDown"
            android:entries="@string/hour_drop_down_text"
            android:layout_marginRight="10dp"
            />

        <ExpandableListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:entries="@string/default_minutes"
            android:id="@+id/minuteDropDown"
            android:layout_marginRight="10dp"
            />
    </LinearLayout>

    <TextView
        android:text="TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"/>
</LinearLayout>
