<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_contact"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.orangecoastcollege.cs273.kfrederick5tmorrissey1ischenck.occstudentsuccesscenter.ContactActivity">

    <TextView
        android:text="@string/contact_us_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:gravity="center"/>

    <TextView
        android:text="@string/phone_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/phoneNumberTextView"
        android:clickable="true"
        android:layout_marginTop="20dp"
        android:textColor="@color/occPaleBlue"
        android:textColorLink="@android:color/black"
        android:textSize="16sp"
        android:elevation="0dp"/>

    <TextView
        android:text="@string/address_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addressTextView"
        android:clickable="true"
        android:layout_marginTop="20dp"
        android:textColor="@color/occPaleBlue"
        android:textColorLink="@android:color/black"
        android:textSize="16sp"/>

</LinearLayout>
