<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_to_ask"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="edu.orangecoastcollege.cs273.kfrederick5tmorrissey1ischenck.occstudentsuccesscenter.ToAskActivity">

    <TextView
        android:text="@string/to_ask_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toAskTitleText"
        android:textColor="@color/white"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:layout_marginTop="60dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:hint="Enter Question For Later"
        android:id="@+id/questionEditText"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/add_question_button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/occ_button_style"
            android:textColor="@color/white"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:onClick="addQuestionOnClick"/>

        <Button
            android:text="@string/clear_questions_button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/occ_button_style"
            android:textColor="@color/white"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:onClick="clearSelectedOnClick"/>
    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/questionsListView"/>
</LinearLayout>
