<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.orangecoastcollege.cs273.kfrederick5tmorrissey1ischenck.occstudentsuccesscenter.EditProfileActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/firstNameEditText"
                android:layout_weight="1"
                android:hint="First Name"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/lastNameEditText"
                android:layout_weight="1"
                android:hint="Last Name"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical">

            <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:entries="@string/subject_drop_down_text"
                android:id="@+id/editSubjectSpinner"
                android:clickable="true"
                android:layout_weight="1"/>

            <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:entries="@string/class_drop_down_text"
                android:id="@+id/editClassSpinner"
                android:clickable="true"
                android:layout_weight="1"/>

            <Button
                android:text="@string/add_class_button"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:id="@+id/addClassButton"
                android:layout_weight="1"
                android:onClick="addClassOnClick"
                android:background="@drawable/occ_button_style"
                android:textColor="@color/white"/>

        </LinearLayout>
    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>

    <Button
        android:text="@string/remove_selected_button"
        android:layout_height="40dp"
        android:id="@+id/removeSelectedButton"
        android:onClick="removeSelectedOnClick"
        android:background="@drawable/occ_button_style"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"
        android:layout_width="175dp"/>
</LinearLayout>
