<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_tutor_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.orangecoastcollege.cs273.kfrederick5tmorrissey1ischenck.occstudentsuccesscenter.TutorDetailsActivity"
    android:orientation="vertical"
    >

    <TextView
        android:text="Tutor Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tutorNameTextView"
        android:textSize="24sp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:layout_marginBottom="15dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:text="@string/tutor_hours_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:textColorHighlight="@color/white"
                android:layout_marginBottom="10dp"
                android:gravity="left"
                android:layout_gravity="left"/>

            <TextView
                android:text="Tutor Hours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tutorHoursTextView"
                android:layout_margin="5dp"
                android:textColor="@color/occPaleBlue"
                android:gravity="left"
                android:layout_gravity="left"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:text="@string/tutor_courses_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView5"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:textColorHighlight="@color/white"
                android:layout_marginBottom="10dp"
                android:gravity="left"
                android:layout_gravity="left"/>

            <TextView
                android:text="Tutor Classes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tutorClassTextView"
                android:layout_margin="5dp"
                android:textColor="@color/occPaleBlue"
                android:gravity="left"
                android:layout_gravity="left"/>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:text="@string/return_to_search_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:onClick="returnToSearch"
        android:background="@drawable/occ_button_style"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:elevation="16dp"
        android:textColor="@color/white"/>
</LinearLayout>
